--- a/autocommit.yml
+++ b/autocommit.yml
@@ -25,8 +25,8 @@ jobs:
           
       - name: Commit changes
         run: |
-          git config --local user.email "machlevi2021@gmail.com"
-          git config --local user.name "Mach-Levi"
+          git config --local user.email "omololevy@gmail.com"
+          git config --local user.name "omololevy"
           git add -A
           
           arr[0]="chore(bot): 😂 auto commit"
