Adjust the bot parameter

--- a/.github/workflows/autocommit.yml
+++ b/.github/workflows/autocommit.yml
@@ -29,16 +29,16 @@ jobs:
           git config --local user.name "omololevy"
           git add -A
           
-          arr[0]="chore(bot): auto commit"
-          arr[1]="chore(bot): auto commit"
-          arr[2]="chore(bot): auto commit"
-          arr[3]="chore(bot): auto commit"
-          arr[4]="chore(bot): auto commit"
-          arr[5]="chore(bot): auto commit"
-          arr[6]="chore(bot): auto commit"
-          arr[7]="chore(bot): auto commit"
-          arr[8]="chore(bot): auto commit"
-          arr[9]="chore(bot): auto commit"
+          arr[0]="Levy-bot: successful commit"
+          arr[1]="Levy-bot: successful commit"
+          arr[2]="Levy-bot: successful commit"
+          arr[3]="Levy-bot: successful commit"
+          arr[4]="Levy-bot: successful commit"
+          arr[5]="Levy-bot: successful commit"
+          arr[6]="Levy-bot: successful commit"
+          arr[7]="Levy-bot: successful commit"
+          arr[8]="Levy-bot: successful commit"
+          arr[9]="Levy-bot: successful commit"
           
           rand=$[$RANDOM % ${#arr[@]}]
           
